# pythondaq

./: adruinodata.txt  arduino_device.py  diode_experiment.py  pyproject.toml  test_adruino.py  view.py
src/: logo.qrc
src/pythondaq/: arduino_device.py  cli.py  diode_experiment.py  gui.py  mainwindow.ui  ui_mainwindow.py  view.py
